# TLiquid

./: .gitignore  CLAUDE.md  LICENSE  QA.md  README.md  ROADMAP.md  index.html  llm_translator_prd.md  package.json  pnpm-lock.yaml  result.html  settings.html  tliquid_todo.md  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md
scripts/: build-macos.sh  release.sh
src/: AboutSettings.svelte  App.svelte  AppearanceSettings.svelte  LanguageSettings.svelte  Notifications.svelte  PrivacySettings.svelte  ProviderSettings.svelte  Result.svelte  Settings.svelte  ShortcutSettings.svelte  StartupSettings.svelte  Translate.svelte  result.ts  settings.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  commands.rs  config.rs  diagnostics.rs  error.rs  languages.rs  lib.rs  main.rs  menu.rs  secrets.rs  shortcuts.rs  startup.rs  translation.rs  tray.rs  updater.rs  windows.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  http.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/lib/: languages.ts  recording.ts  styles.css  tauri.ts  updates.ts
