[package]
name = "tliquid"
version = "0.1.0"
description = "TLiquid — macOS-first BYOK LLM translator"
authors = ["TLiquid contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.77"

[lib]
# The `_lib` suffix keeps the library name distinct from the binary on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "tliquid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Temp dirs for filesystem-touching unit tests (config load/save/backup).
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

# HTTP client for direct BYOK provider calls (P0-008+). Uses the system TLS
# stack (Secure Transport on macOS), so no OpenSSL build dependency. The
# `stream` feature backs streaming translation (P1-009): `bytes_stream()` over
# the SSE response.
reqwest = { version = "0.12", features = ["json", "stream"] }

# `StreamExt::next` to drive `reqwest`'s byte stream (P1-009 streaming). Already
# in the dependency tree via reqwest/tokio, so this adds no real weight.
futures-util = "0.3"

# Timer for the background auto-update poll (P2-013). tokio is already in the
# tree via reqwest; naming it directly (time feature only) lets us sleep between
# polls on Tauri's async runtime without pulling extra weight.
tokio = { version = "1", features = ["time"], default-features = false }

# Secure secret storage. `apple-native` maps directly onto the macOS Keychain.
keyring = { version = "3", features = ["apple-native"] }

async-trait = "0.1"

# Single-instance and launch-at-login are desktop-only concerns.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# Launch-at-login (P1-001). macOS uses a LaunchAgent.
tauri-plugin-autostart = "2"
# In-app updates (P2-007 manual check/install + P2-013 auto-check). Fetches a
# minisign-signed full-bundle update from GitHub Releases; desktop-only.
tauri-plugin-updater = "2"

# Selected-text capture (P0-013) simulates Cmd+C. macOS-only in Phase 0; keeping
# the dependency platform-gated avoids pulling input libs on other targets.
[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.6"
# macOS translucency/vibrancy behind the panel (P2-012). Applies an
# NSVisualEffectView; already in the dependency tree, so this adds no weight.
window-vibrancy = "0.6"

[profile.release]
# Optimize for a small always-running utility (PRD §13.1 footprint targets).
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
